<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SGS Barcode Helper</string>
    <string name="downloading">Downloading updates</string>
    <string name="report">Report</string>
    <string name="send">Send</string>
    <string name="add">Add</string>
    <string name="crate">Crate</string>
    <string name="pcs">Pcs</string>
    <string name="grade">Grade</string>
    <string name="thick">Thick</string>
    <string name="local">Local</string>
    <string name="export">Export</string>
    <string name="shift">Shift</string>
    <string name="date">Date</string>
    <string name="materials">Materials</string>
    <string name="grading">Grading</string>
    <string name="stbj">STBJ</string>
    <string name="type">Type</string>
    <string name="delete">Delete</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_item_title">Delete item</string>
    <string name="ignore">Ignore</string>
    <string name="update">Update</string>
    <string name="update_available">Update available</string>
    <string name="advanced">Advanced</string>
    <string name="crate_value" tools:ignore="PluralsCandidate">%d Crate</string>
    <string name="pcs_value" translatable="false">%d Pcs</string>
    <string name="volume_value" translatable="false">%.2f m³</string>
    <string name="glue">Glue</string>
</resources>