<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/thick">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/thick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:hint="@string/grade">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:hint="@string/glue">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/glue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/pcs">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/pcs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="14dp"
            android:layout_weight="1"
            android:hint="@string/crate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/crate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="1"
                tools:ignore="HardcodedText" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>